--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Oswald:wght@200..700&display=swap')
-
-@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Great+Vibes&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
+  /* Primary Font (Headers) */
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: 'Playfair Display', serif;
+  }
+
+  /* Secondary Font (Body) */
   body {
-    font-family: 'Fredericka the Great', cursive;
+    font-family: 'Open Sans', sans-serif;
   }
 }
